--- a/index.html
+++ b/index.html
@@ -1,11 +1,255 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8">
-    <title>Willkommen</title>
-  </head>
-  <body>
-    <h1>Willkommen auf der Projektseite!</h1>
-    <p>Dies ist eine minimale GitHub Pages-Seite für das Repository <strong>Baumarten-Finder-Thueringen</strong>.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Baumarten-Finder Thüringen</title>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-50">
+  <div id="root"></div>
+
+  <script type="text/babel">
+    const { useState } = React;
+
+    const SPECIES = [
+      { id: "traubeneiche", name: "Traubeneiche (Quercus petraea)" },
+      { id: "stieleiche", name: "Stieleiche (Quercus robur)" },
+      { id: "rotbuche", name: "Rotbuche (Fagus sylvatica)" },
+      { id: "hainbuche", name: "Hainbuche (Carpinus betulus)" },
+      { id: "bergahorn", name: "Bergahorn (Acer pseudoplatanus)" },
+      { id: "spitzahorn", name: "Spitzahorn (Acer platanoides)" },
+      { id: "esche", name: "Gemeine Esche (Fraxinus excelsior)" },
+      { id: "ulme", name: "Ulme (Ulmus sp.)" },
+      { id: "waldkiefer", name: "Kiefer (Pinus sylvestris)" },
+      { id: "fichte", name: "Fichte (Picea abies)" },
+      { id: "laerche", name: "Europäische Lärche (Larix decidua)" },
+      { id: "douglasie", name: "Douglasie (Pseudotsuga menziesii)" },
+      { id: "weistanne", name: "Weißtanne (Abies alba)" },
+      { id: "birke", name: "Birke (Betula pendula)" },
+      { id: "erle", name: "Schwarz-Erle (Alnus glutinosa)" },
+      { id: "pappel", name: "Pappel (Populus sp.)" },
+      { id: "espe", name: "Espe (Populus tremula)" },
+      { id: "linde", name: "Linde (Tilia sp.)" },
+      { id: "eibe", name: "Eibe (Taxus baccata)" },
+      { id: "kirschbaum", name: "Wildkirsche (Prunus avium)" },
+      { id: "sorbus", name: "Vogelbeere (Sorbus aucuparia)" }
+    ];
+
+    const BODENARTEN = [
+      "Kies/Schotter","Sand","Sandig-Schluff","Sandig-Lehm","Schluff","Schluff-Lehm",
+      "Lehm","Tonig-Lehm","Ton","Steiniger Boden / Skeletthaltig","Silikatisch (schieferreich)",
+      "Kalkhaltig","Humusreich","Organisch (Moor/Torf)",
+      "Reinsande","Lehmsande","Schluffsande","Sandlehme","Normallehme","Tonlehme","Lehmschluffe","Tonschluffe","Schlufftone","Moore"
+    ].sort((a,b)=>a.localeCompare(b,'de'));
+
+    const BODENTYPEN = Array.from({length: 69}, (_, i) => (i+1).toString());
+    const HANGAUSR = ["Eben","Norden","Nordosten","Osten","Südosten","Süden","Südwesten","Westen","Nordwesten"];
+    const FELDKAPAZITAET = [
+      "0 - <50 (sehr gering)",
+      "50 - <90 (gering)",
+      "90 - <140 (mittel)",
+      "140 - <200 (hoch)",
+      "200 - <270 (sehr hoch)",
+      "≥270 (äußerst hoch)"
+    ];
+
+    function feldkapazitaetToFeuchte(fk){
+      if(fk.startsWith("0") || fk.startsWith("50")) return "trocken";
+      if(fk.startsWith("90") || fk.startsWith("140")) return "frisch";
+      if(fk.startsWith("200") || fk.startsWith("≥")) return "nass";
+      return "frisch";
+    }
+
+    function scoreSpecies(input, sp) {
+      let score = 0;
+      const { bodenart, bodenmaechtigkeit, bodentyp, hang, ph, humus, feldkapazitaet } = input;
+      const bodenfeuchte = feldkapazitaetToFeuchte(feldkapazitaet);
+
+      const conifers = ["waldkiefer","fichte","laerche","douglasie","weistanne"];
+      const oaks = ["traubeneiche","stieleiche"];
+      const beeches = ["rotbuche"];
+
+      if (bodenfeuchte === "trocken") {
+        if (["waldkiefer","laerche"].includes(sp.id)) score += 1.0;
+      }
+      if (bodenfeuchte === "frisch") {
+        if (["erle","pappel"].includes(sp.id)) score += 1.2;
+      }
+      if (bodenfeuchte === "nass") {
+        if (["erle","pappel"].includes(sp.id)) score += 1.5;
+      }
+
+      if (humus === "hoch") {
+        if (beeches.includes(sp.id)) score += 1.0;
+        if (["bergahorn","esche"].includes(sp.id)) score += 0.8;
+      }
+
+      if (hang.startsWith("Süd")) {
+        if (oaks.includes(sp.id)) score += 1.0;
+        if (conifers.includes(sp.id) && sp.id !== "fichte") score += 0.4;
+        if (sp.id === "fichte") score -= 0.6;
+      }
+      if (hang.startsWith("Nord")) {
+        if (["rotbuche","weistanne","fichte"].includes(sp.id)) score += 0.6;
+      }
+
+      if (input.bodenmaechtigkeit === "flach") {
+        if (sp.id === "waldkiefer") score += 0.5;
+      }
+      if (input.bodenmaechtigkeit === "tief") score += 0.3;
+
+      if (ph === "sauer") {
+        if (["fichte","waldkiefer","laerche"].includes(sp.id)) score += 0.5;
+        score *= 0.98;
+      }
+      if (ph === "neutral") score += 0.2;
+
+      if (sp.id === "fichte" && hang.startsWith("Süd")) score -= 1.0;
+      if (["esche","ulme"].includes(sp.id)) score -= 0.5;
+      if (["traubeneiche","hainbuche","douglasie","laerche","weistanne"].includes(sp.id)) score += 0.8;
+      if (["rotbuche"].includes(sp.id) && bodenfeuchte === "trocken") score -= 0.5;
+
+      // **0–10 Skalierung**
+      const minScore = -1.0;
+      const maxScore = 3.0;
+      let scaled = ((score - minScore) / (maxScore - minScore)) * 10;
+      if (scaled < 0) scaled = 0;
+      if (scaled > 10) scaled = 10;
+      return Math.round(scaled*10)/10;
+    }
+
+    function recommendMix(scored) {
+      const conifers = ["waldkiefer","fichte","laerche","douglasie","weistanne"];
+      const laub = scored.filter(sp=>!conifers.includes(sp.id));
+      const nadel = scored.filter(sp=>conifers.includes(sp.id));
+      return { laub: laub.slice(0,2), nadel: nadel.slice(0,2) };
+    }
+
+    function App(){
+      const [input, setInput] = useState({
+        bodenart: BODENARTEN[0],
+        bodenmaechtigkeit: "mittel",
+        bodentyp: BODENTYPEN[0],
+        hang: HANGAUSR[0],
+        ph: "neutral",
+        humus: "hoch",
+        feldkapazitaet: FELDKAPAZITAET[2],
+        anmerkungen: ""
+      });
+      const [results, setResults] = useState(null);
+      const [mix, setMix] = useState(null);
+
+      function handleChange(e){
+        const {name, value} = e.target;
+        setInput(s => ({...s, [name]: value}));
+      }
+
+      function recommend(e){
+        e.preventDefault();
+        const scored = SPECIES.map(sp => ({...sp, score: scoreSpecies(input, sp)})).sort((a,b)=>b.score-a.score);
+        setResults(scored);
+        setMix(recommendMix(scored));
+      }
+
+      return (
+        <div className="max-w-5xl mx-auto bg-white rounded-2xl shadow-lg p-6 mt-6">
+          <h1 className="text-2xl font-bold mb-4">Baumarten-Finder Thüringen</h1>
+          <form onSubmit={recommend} className="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div>
+              <label className="block text-sm font-medium">Bodenart</label>
+              <select name="bodenart" value={input.bodenart} onChange={handleChange} className="w-full border rounded p-2">
+                {BODENARTEN.map(b=>(<option key={b} value={b}>{b}</option>))}
+              </select>
+            </div>
+            <div>
+              <label className="block text-sm font-medium">Bodentyp</label>
+              <select name="bodentyp" value={input.bodentyp} onChange={handleChange} className="w-full border rounded p-2">
+                {BODENTYPEN.map(b=>(<option key={b} value={b}>{b}</option>))}
+              </select>
+            </div>
+            <div>
+              <label className="block text-sm font-medium">Hangausrichtung</label>
+              <select name="hang" value={input.hang} onChange={handleChange} className="w-full border rounded p-2">
+                {HANGAUSR.map(h=>(<option key={h} value={h}>{h}</option>))}
+              </select>
+            </div>
+            <div>
+              <label className="block text-sm font-medium">Bodenmächtigkeit</label>
+              <select name="bodenmaechtigkeit" value={input.bodenmaechtigkeit} onChange={handleChange} className="w-full border rounded p-2">
+                <option value="flach">flach (&lt;30 cm)</option>
+                <option value="mittel">mittel (30–80 cm)</option>
+                <option value="tief">tief (&gt;80 cm)</option>
+              </select>
+            </div>
+            <div>
+              <label className="block text-sm font-medium">pH-Wert</label>
+              <select name="ph" value={input.ph} onChange={handleChange} className="w-full border rounded p-2">
+                <option value="sauer">sauer</option>
+                <option value="neutral">neutral</option>
+                <option value="basisch">basisch</option>
+              </select>
+            </div>
+            <div>
+              <label className="block text-sm font-medium">Humusgehalt</label>
+              <select name="humus" value={input.humus} onChange={handleChange} className="w-full border rounded p-2">
+                <option value="niedrig">niedrig</option>
+                <option value="mittel">mittel</option>
+                <option value="hoch">hoch</option>
+              </select>
+            </div>
+            <div>
+              <label className="block text-sm font-medium">Nutzbare Feldkapazität (mm)</label>
+              <select name="feldkapazitaet" value={input.feldkapazitaet} onChange={handleChange} className="w-full border rounded p-2">
+                {FELDKAPAZITAET.map(f => (<option key={f} value={f}>{f}</option>))}
+              </select>
+            </div>
+            <div className="md:col-span-2 flex justify-end gap-2 mt-2">
+              <button type="reset" onClick={()=>setInput({
+                bodenart:BODENARTEN[0],bodenmaechtigkeit:"mittel",
+                bodentyp:BODENTYPEN[0],hang:HANGAUSR[0],ph:"neutral",humus:"hoch",
+                feldkapazitaet:FELDKAPAZITAET[2],anmerkungen:""
+              })} className="px-4 py-2 bg-gray-200 rounded">Reset</button>
+              <button type="submit" className="px-4 py-2 bg-green-600 text-white rounded">Empfehlen</button>
+            </div>
+          </form>
+
+          {results && (
+            <div className="mt-6">
+              <h2 className="text-xl font-semibold">Empfohlene Baumarten</h2>
+              <ul className="mt-4 grid grid-cols-1 md:grid-cols-2 gap-3">
+                {results.map((r,idx)=>(<li key={r.id} className="p-3 border rounded">
+                  <div className="font-semibold">{idx+1}. {r.name}</div>
+                  <div className="text-xs text-gray-500">Score: {r.score}</div>
+                </li>))}
+              </ul>
+
+              {mix && (
+                <div className="mt-6 p-4 border rounded bg-green-50">
+                  <h3 className="text-lg font-semibold">Empfohlene Mischungen für klimastabile Wälder</h3>
+                  <ul className="list-disc ml-6 mt-2 text-sm">
+                    {mix.laub.map(l => mix.nadel.map(n => (
+                      <li key={l.id+n.id}>{n.name} + {l.name}</li>
+                    )))})
+                  </ul>
+                </div>
+              )}
+
+              <p className="mt-3 text-sm text-gray-600">
+                Hinweis: Diese Empfehlungen berücksichtigen Standortbedingungen, Klimastabilität 
+                und die Notwendigkeit von Mischwäldern. Die Bodenfeuchte wird automatisch aus der Feldkapazität abgeleitet. 
+                Für eine forstfachliche Entscheidung ist eine genaue Standortanalyse nötig.
+              </p>
+            </div>
+          )}
+        </div>
+      );
+    }
+
+    ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+  </script>
+</body>
 </html>
